<resources>
    <string name="app_name">lailaky</string>
    <string name="username">user name</string>
    <string name="pass">Password</string>
    <string name="register">SignUp</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="login">login</string>
    <string name="Skip">Visitor</string>
    <string name="registerMassege">Do you have account ?</string>

    <string name="details">details : </string>
    <string name="view">view</string>
    <string name="book">book</string>
    <string name="subject">Subject</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="uploadImge">Select photos</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="profile">Profile</string>
    <string name="gallary">gallary</string>
    <string name="updateprfile">تحديث الملف الشخصي</string>
    <string name="offers">Offers</string>
    <string name="location"> Location </string>
    <string name="title_activity_maps">Map</string>
    <string name="name">name</string>
    <string name="sel_album_img">Gallery</string>
    <string name="chos_album_photo">Please choose photo from gallery</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="re_type_password">Re-Type password</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">cancel</string>
    <string name="something">Something went haywire</string>
    <string name="done">success </string>
    <string name="upload_img">Upload Image...</string>
    <string name="img_deleted">Image deleted successfully</string>
    <string name="img_not_deleted">Error image not deleted try again later</string>
    <string name="album_limited">Album size is limited</string>
    <string name="img_added">image added successfully</string>
    <string name="img_not_added">Error image not added</string>
    <string name="delete_img">Deleting...</string>
    <string name="album">Album</string>
    <string name="album_full">Album completed</string>
    <string name="album_reg">Album is booked successfully</string>
    <string name="album_not_booked">Error album not booked</string>
    <string name="do_logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">Noا</string>
    <string name="login_">Login...</string>
    <string name="chk_user_pas">Check username or password</string>
    <string name="studio_lailaky">lilaky studio</string>
    <string name="regis">Wait for register...</string>
    <string name="error">Error</string>
    <string name="enter_user_name">User name require</string>
    <string name="enter_pass">Password require</string>
    <string name="enter_email">Email address require</string>
    <string name="inv_email">Invalid email address</string>
    <string name="enter_phone">Phone number require</string>
    <string name="inv_phone">Invalid phone number</string>
    <string name="upd_pass">Update password...</string>
    <string name="pass_not_match">Password not match</string>
    <string name="upd_succ">updated successfully</string>
    <string name="fialed">Failed</string>
    <string name="register_befor">this username Or Email exist</string>
    <string name="save">Save</string>
    <string name="upld">upload</string>
    <string name="enter_name">Name require</string>
    <string name="email_require">Email require</string>
    <string name="enter_msg">Enter your message</string>
    <string name="price">Price : </string>
    <string name="album_size">Album page size : </string>
    <string name="upl_image">Upload album images....</string>
    <string name="view2">View</string>
    <string name="another_page">Another page</string>
    <string name="img_not_eno">Album is full</string>
    <string name="do_se">Do you want to select other pages to upload?. or View images.\n</string>
    <string name="rem">Remain</string>
    <string name="sel_min">Press long and Select minimum 5 photo</string>
    <string name="show_photo">Show photo</string>
    <string name="page">Page</string>
    <string name="sar">SAR</string>
    <string name="choose_lang">CHOOSE LANGUAGE</string>
    <string name="help">User Guide</string>
    <string name="si_su">Sign in or create a new account.</string>
    <string name="continuee">continue</string>
    <string name="notification">Notifications</string>
    <string name="continu">Continue</string>
    <string name="hsnan">OK</string>
    <string name="bynat">Personal Information</string>
    <string name="adress">Address</string>
    <string name="bynatTwsel">Connection Information</string>
    <string name="Governorate">Governorate</string>
    <string name="city">City</string>
    <string name="forgetPass">Forgot Password?</string>
    <string name="complement">Complete Information</string>
    <string name="sendmail">Wait Until Send Email .. </string>
    <string name="choose">Choose</string>
    <string name="night">This image can not be placed because its size is less than required</string>
    <string name="cover">Make cover</string>
    <string name="frames">Choose frames</string>
    <string name="twopages">One photo on two pages</string>
    <string name="ch_own_photo_cover">Choose cover photo</string>
    <string name="add_cov">Add photo on cover</string>
    <string name="cover_photo">Cover photo</string>
    <string name="lod">Loading...</string>
    <string name="cov_photo">Cover Photo</string>

</resources>