<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user_icon_nav"
            android:title="@string/profile" />
        <item
        android:id="@+id/nav_about"
        android:icon="@drawable/info_icon_nav"
        android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/contact_icon_nav"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share_icon_nav"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon_nav"
            android:title="@string/logout" />
    </group>



</menu>
