<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.m.laylak.LoginActivity">


    <ImageView
        android:layout_width="160dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/logot3"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/regist1"
            android:gravity="center"
            android:hint="@string/username"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/password1"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/email"
            android:layout_width="310dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/email1"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/phon1e"
            android:gravity="center"
            android:hint="@string/phone"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/log"
            android:onClick="lo
            gin"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button2"
            android:text="@string/register"
            android:textColor="@color/white"
            tools:ignore="OnClick" />



    </LinearLayout>
</LinearLayout>
