<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.m.laylak.Activites.LoginActivity">


    <ImageView
        android:layout_width="168dp"
        android:layout_height="107dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logot3"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/regist1"
            android:gravity="center"
            android:hint="@string/username"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/password1"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/log"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button2"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white"
            tools:ignore="OnClick" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="skip"
            android:text="@string/Skip"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:ignore="OnClick" />



    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="69dp"
            android:layout_marginStart="69dp"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:ignore="OnClick" />



    </RelativeLayout>
</LinearLayout>
