<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/img_selected"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/notification"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/gray1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/sel_min"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"

        >
        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/hsnan"
            android:textColor="@color/white"
            />

    </LinearLayout>

</LinearLayout>