<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:orientation="vertical">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context="com.farida.fareda.gazy3aqlk.Activitiess.Details">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="عنوان البوم"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            />



        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:id="@+id/detail_desc"
                android:gravity="center"
                android:layout_gravity="center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textColor="@color/colorPrimary"

                />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight=".9"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="10dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:text="@string/details"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:scaleType="center"
                    android:src="@drawable/icon1"/>

            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="2"
            >



            <TextView
                android:id="@+id/detail_pric"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:textColor="@color/colorPrimary"

                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight=".9"
                android:gravity="right|center_vertical"
                android:layout_marginLeft="10dp"


                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:text="@string/price"
                    android:gravity="center"
                    />
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:src="@drawable/icon2"
                    android:scaleType="center"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/gallary"
            android:text="@string/sel_album_img"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/collect2"
            android:layout_marginTop="20dp"
            />


    </LinearLayout>
</ScrollView>
